--- a/style.css
+++ b/style.css
@@ -11,17 +11,16 @@
 body {
     background-size: cover;
     background-image: url(images/Web.png);
-    /* background-repeat: no-repeat; */
     text-rendering: optimizeLegibility;
 }
 
 .grid-container {
     display: grid;
-    /* grid-row-gap: 15px; */
     grid-template-columns: auto;
 }
 
 .grid-item {
+    border: 1px solid black;
     height: 33.3vh;
 }
 
@@ -40,7 +39,7 @@ body {
     font-weight: bold;
     position: absolute;
     bottom: 2%;
-    left: 26%;
+    left: 30%;
 }
 
 .coming-soon-child-para {
@@ -58,40 +57,18 @@ body {
 }
 
 .mixd-child {
-    left: 47%;
+    left: 50%;
     position: absolute;
     top: 50%;
     transform: translate(-50%, -50%);
-}
-
-.salon {
-    bottom: 34%;
-    display: inline-block;
-    font-family: 'Roboto', sans-serif;
-    font-size: 26px;
-    font-weight: bold;
-    letter-spacing: 0.5px;
-    position: absolute;
-    right: -6%;
-    transform: rotate(-90deg);
-}
-
-.salon-name {
-    font-size: 122px;
-    text-transform: uppercase;
-    transform: scale(1, 1.3);
-}
-
-.salon-name::first-letter {
-    font-size: 140%;
 }
 
 .slogan {
     color: #000000;
     font-family: 'Roboto', sans-serif;
     font-size: 32px;
-    margin-top: 18px;
-    word-spacing: 2px;
+    margin-top: 15px;
+    word-spacing: 2.5px;
 }
 
 
@@ -99,39 +76,8 @@ body {
 /* Buttons */
 /* ------- */
 
-.btn-1 a:link,
-.btn-1 a:visited {
-    outline: none;
-    text-decoration: none;
-}
-
-.btn-2 a:link,
-.btn-2 a:visited {
-    color: #D84CD8;
-    outline: none;
-    text-decoration: none;
-}
-
-.btn-1 {
-    background-color: #D84CD8;
-    border-radius: 24px;
-    color: #fff; 
-    cursor: pointer;
-    font-family: 'Roboto', sans-serif;
-    font-size: 24px;
-    outline: none;
-    padding: 15px 42px;
-}
-
-.btn-2 {
-    border-radius: 24px;
-    cursor: pointer;
-    font-family: 'Roboto', sans-serif;
-    font-size: 24px;
-    margin-top: 15px;
-    outline: none;
-    padding: 15px 12px;
-    text-decoration: none;
+a {
+    display: block;
 }
 
 .buttons {
@@ -139,8 +85,59 @@ body {
 }
 
 .button-div {
-    left: 47%;
+    left: 50%;
     position: absolute;
     top: 44%;
     transform: translate(-50%, -50%);
+}
+
+.btn-1 {
+    background-color: #D84CD8;
+    border: 1px solid #D84CD8;
+    border-radius: 24px;
+    color: #fff; 
+    cursor: pointer;
+    font-family: 'Roboto', sans-serif;
+    font-size: 24px;
+    margin-bottom: 16px;
+    outline: none;
+    padding: 18px 42px;
+}
+
+.btn-2 {
+    border: 1px solid #D84CD8;
+    border-radius: 24px;
+    color: #D84CD8;
+    cursor: pointer;
+    font-family: 'Roboto', sans-serif;
+    font-size: 24px;
+    outline: none;
+    padding: 18px 12px;
+    text-decoration: none;
+}
+
+.btn-1:link,
+.btn-1:visited {
+    outline: none;
+    text-decoration: none;
+}
+
+.btn-1:hover,
+.btn-1:active {
+    outline: none;
+    text-decoration: none;
+}
+
+.btn-2:link,
+.btn-2:visited {
+    color: #D84CD8;
+    outline: none;
+    text-decoration: none;
+}
+
+.btn-2:hover,
+.btn-2:active {
+    color: #fff;
+    background-color: #D84CD8;
+    border: 1px solid #D84CD8;
 }
