--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@ body {
 }
 
 .grid-item {
-    /* border: 1px solid black; */
     height: 33.3vh;
 }
 
@@ -51,11 +50,11 @@ body {
 /* Mixd Salon Hero */
 /* --------------- */
 
-.mixd {
+.mixd-logo {
     position: relative;
 }
 
-.mixd-child {
+.mixd-logo-child {
     left: 50%;
     position: absolute;
     top: 50%;
@@ -67,7 +66,6 @@ body {
     font-family: 'Roboto', sans-serif;
     font-size: 32px;
     margin-top: 15px;
-    text-shadow: 0 2px 0 gray;
     word-spacing: 2.5px;
 }
 
@@ -95,7 +93,7 @@ a {
     background-color: #D84CD8;
     border: 1px solid #D84CD8;
     border-radius: 24px;
-    box-shadow: 0 1px 0 #888, 0 5px 0 #666, 0 6px 6px rgba(0,0,0,0.6);
+    box-shadow: 0 2px 0 0 rgba(0, 0, 0, .2);
     color: #fff; 
     cursor: pointer;
     font-family: 'Roboto', sans-serif;
@@ -103,13 +101,12 @@ a {
     margin-bottom: 16px;
     outline: none;
     padding: 18px 42px;
-    text-shadow: 0 -1px 0 #000;
 }
 
 .btn-2 {
     border: 1px solid #D84CD8;
     border-radius: 24px;
-    box-shadow: 0 1px 0 #888, 0 5px 0 #666, 0 6px 6px rgba(0,0,0,0.6);
+    box-shadow: 0 2px 0 0 rgba(0, 0, 0, .2);
     color: #D84CD8;
     cursor: pointer;
     font-family: 'Roboto', sans-serif;
@@ -117,7 +114,6 @@ a {
     outline: none;
     padding: 18px 12px;
     text-decoration: none;
-    text-shadow: 0 -1px 0 #000;
 }
 
 .btn-1:link,
@@ -129,7 +125,6 @@ a {
 .btn-1:hover,
 .btn-1:active {
     background-color: rgb(207, 33, 207);
-    opacity: 1;
     outline: none;
     text-decoration: none;
     transform: scale(1.03);
@@ -149,7 +144,6 @@ a {
     color: #fff;
     background-color: #D84CD8;
     border: 1px solid #D84CD8;
-    opacity: 1;
     transform: scale(1.03);
     transition: all 250ms ease;
     -webkit-transition: all 250ms ease;
