--- a/style.css
+++ b/style.css
@@ -100,7 +100,8 @@ a {
     font-size: 24px;
     margin-bottom: 16px;
     outline: none;
-    padding: 18px 42px;
+    padding: 12px 0px;
+    text-align: center;
 }
 
 .btn-2 {
@@ -112,7 +113,8 @@ a {
     font-family: 'Roboto', sans-serif;
     font-size: 24px;
     outline: none;
-    padding: 18px 12px;
+    padding: 12px 10px;
+    text-align: center;
     text-decoration: none;
 }
 
