--- a/style.css
+++ b/style.css
@@ -50,6 +50,10 @@ body {
 /* Mixd Salon Hero */
 /* --------------- */
 
+.logo {
+    padding-left: 16%;
+}
+
 .mixd-logo {
     position: relative;
 }
@@ -64,8 +68,8 @@ body {
 .slogan {
     color: #000000;
     font-family: 'Roboto', sans-serif;
-    font-size: 32px;
-    margin-top: 15px;
+    font-size: 26px;
+    margin-top: 19px;
     word-spacing: 2.5px;
 }
 
@@ -90,9 +94,8 @@ a {
 }
 
 .btn-1 {
-    background-color: #D84CD8;
-    border: 1px solid #D84CD8;
-    border-radius: 24px;
+    background-color: #222;
+    border-radius: -2px;
     box-shadow: 0 2px 0 0 rgba(0, 0, 0, .2);
     color: #fff; 
     cursor: pointer;
@@ -105,10 +108,10 @@ a {
 }
 
 .btn-2 {
-    border: 1px solid #D84CD8;
-    border-radius: 24px;
+    border: 1px solid #eeeeee;
+    border-radius: -17px;
     box-shadow: 0 2px 0 0 rgba(0, 0, 0, .2);
-    color: #D84CD8;
+    color: #444;
     cursor: pointer;
     font-family: 'Roboto', sans-serif;
     font-size: 24px;
@@ -126,7 +129,7 @@ a {
 
 .btn-1:hover,
 .btn-1:active {
-    background-color: rgb(207, 33, 207);
+    background-color: rgb(0, 0, 0, .2);
     outline: none;
     text-decoration: none;
     transform: scale(1.03);
@@ -136,7 +139,7 @@ a {
 
 .btn-2:link,
 .btn-2:visited {
-    color: #D84CD8;
+    color: #444;
     outline: none;
     text-decoration: none;
 }
@@ -144,8 +147,7 @@ a {
 .btn-2:hover,
 .btn-2:active {
     color: #fff;
-    background-color: #D84CD8;
-    border: 1px solid #D84CD8;
+    background-color: rgba(0, 0, 0, .2);
     transform: scale(1.03);
     transition: all 250ms ease;
     -webkit-transition: all 250ms ease;
